# Carapace

./: .gitignore  Cargo.toml  README.md  carapace-adversarial-review.md  carapace-appendix-b-cbor.md  carapace-planning-session.md  carapace-protocol.md  cbor_vectors.py  chela-extendable-splits.md
.github/workflows/: ci.yml  release.yml
crates/carapace/: Cargo.toml
crates/carapace-api/: Cargo.toml
crates/carapace-api/src/: auth.rs  handlers.rs  lib.rs
crates/carapace-api/static/: index.html
crates/carapace-api/static/_app/: version.json
crates/carapace-api/static/_app/immutable/assets/: 0.BIBOqY7u.css  2.BFG0QVNL.css  2.BpqPioXw.css  2.Ccp3aMT0.css
crates/carapace-api/static/_app/immutable/chunks/: B-eQ1nZp.js  BN8qMjn3.js  BQI5xrNe.js  CCeg2KC3.js  Cfkx4BKF.js  CxI-kB2L.js  D7CCBGlz.js  DANaft0M.js  UU-Nkmeo.js
crates/carapace-api/static/_app/immutable/entry/: app.B6L7z2d3.js  app.B9_HhbBj.js  app.BJNxxL8q.js  app.Bt-36wtZ.js  app.CopraRe4.js  start.BYLSJrsf.js  start.CCRUxV-Q.js  start.CbdnOVWP.js  start.Dm_mFiEO.js  start.ue2jlNPp.js
crates/carapace-api/static/_app/immutable/nodes/: 0.7KdoZNuO.js  0.DSqSDKgT.js  1.6VnKa7tn.js  1.B6boT-Hi.js  1.CHLVAAdi.js  1.DQBS76AY.js  1.X1iBfBii.js  2.3tLMnbRp.js  2.Br99dPyn.js  2.CaWSwQlO.js  2.Diq4R0Yj.js  2.o5c2zq9l.js
crates/carapace-api/tests/: integration.rs
crates/carapace-crypto/: Cargo.toml
crates/carapace-crypto/src/: atrest.rs  content.rs  identity.rs  kdf.rs  lib.rs  seal.rs  state_seal.rs
crates/carapace-disclose/: Cargo.toml
crates/carapace-disclose/src/: lib.rs
crates/carapace-friend/: Cargo.toml
crates/carapace-friend/src/: card.rs  handshake.rs  lib.rs  resplit.rs  ticket.rs  unfriend.rs
crates/carapace-net/: Cargo.toml
crates/carapace-net/src/: blobs.rs  endpoint.rs  frame.rs  lib.rs  relay.rs  sync.rs
crates/carapace-net/tests/: integration.rs
crates/carapace-recovery/: Cargo.toml
crates/carapace-recovery/src/: ceremony.rs  grant.rs  lib.rs  split.rs  state_seal.rs
crates/carapace-replica/: Cargo.toml
crates/carapace-replica/src/: lib.rs  owner.rs  peer.rs  policy.rs  por.rs
crates/carapace-replica/tests/: por.rs  scenarios.rs
crates/carapace-share/: Cargo.toml
crates/carapace-share/src/: lib.rs  owner.rs  trustee.rs
crates/carapace-share/tests/: health.rs
crates/carapace-vault/: Cargo.toml
crates/carapace-vault/src/: lib.rs  merge.rs  store.rs
crates/carapace-vault/tests/: merge_ingest.rs  roundtrip.rs
crates/carapace-wire/: Cargo.toml
crates/carapace-wire/src/: lib.rs  messages.rs  value.rs
crates/carapace-wire/tests/: vectors.rs
crates/carapace/src/: lib.rs  main.rs
crates/carapace/tests/: integration.rs
crates/carapaced/: Cargo.toml
crates/carapaced/src/: lib.rs  main.rs  persist.rs  state.rs
crates/carapaced/tests/: attestation_drift.rs  ceremony.rs  default_deny_after_reboot.rs  friend_replica.rs  kill_durability.rs  maintenance.rs  por_reboot_replay.rs  por_unreachable.rs  reboot_survival.rs  recovery_reconstruct.rs  relay_friendship.rs  replica_hardening.rs  selective_disclosure.rs  share_grant.rs  store_and_forward.rs  sync_conflict.rs  three_device_convergence.rs  two_device_sync.rs  unfriend.rs  watch_reingest.rs  watch_sync_interaction.rs
docs/: conformance-ledger.md  spec-errata.md
docs/superpowers/specs/: 2026-07-12-carapace-design.md  2026-07-17-durable-persistence-and-manifest-keys-design.md
gui/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
gui/src/: app.css
gui/src/lib/: api.ts  errors.ts  format.ts  notes.ts  statusStore.ts  token.ts  types.ts
gui/src/lib/components/: CopyHex.svelte  ErrorBanner.svelte  FriendsView.svelte  OverviewView.svelte  RecoveryView.svelte  SharedView.svelte  ShellHero.svelte  VaultsView.svelte
gui/src/routes/: +layout.ts  +page.svelte
