[package]
name = "carapace-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
carapaced = { path = "../carapaced" }
carapace-wire = { path = "../carapace-wire" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
rust-embed = { version = "8", features = ["mime-guess"] }
hex = "0.4"
getrandom = "0.2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
hex = "0.4"
