[package]
name = "carapace-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
hkdf = "0.12"
sha2 = "0.10"
ed25519-dalek = "2"
blake3 = "1"
chacha20poly1305 = "0.10"
fastcdc = "4"
hpke = "0.14"
argon2 = "0.5"
getrandom = "0.2"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
