[package]
name = "carapace-disclose"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
carapace-wire = { path = "../carapace-wire" }
carapace-crypto = { path = "../carapace-crypto" }
ed25519-dalek = "2"
blake3 = "1"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
