[package]
name = "carapace-friend"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
carapace-wire = { path = "../carapace-wire" }
carapace-crypto = { path = "../carapace-crypto" }
carapace-recovery = { path = "../carapace-recovery" }
ed25519-dalek = "2"
blake3 = "1"
getrandom = "0.2"

[dev-dependencies]
hex = "0.4"
