[package]
name = "carapace-vault"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
carapace-wire = { path = "../carapace-wire" }
carapace-crypto = { path = "../carapace-crypto" }
ed25519-dalek = "2"
blake3 = "1"
chacha20poly1305 = "0.10"
zeroize = "1"
getrandom = "0.2"
