[package]
name = "carapace"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "carapace"
path = "src/main.rs"

[dependencies]
ureq = { version = "3", default-features = false, features = ["json"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
carapace-api = { path = "../carapace-api" }
carapaced = { path = "../carapaced" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
